syntax = "proto3";

package assfire.api.v1.model.routing;
option go_package = "assfire.org/api/v1/model/routing";

message Location {
  int32 lat = 1;
  int32 lon = 2;
}

message RoutingProfile {
    double velocity = 1;
}

message RoutingOptions {
  enum RoutingType {
    ROUTING_TYPE_EUCLIDEAN = 0;
    ROUTING_TYPE_RANDOM = 1;
    ROUTING_TYPE_CROWFLIGHT = 2;
    ROUTING_TYPE_OSRM = 3;
  }

  message Osrm {
    enum Geometry {
      GEOMETRY_SIMPLIFIED = 0;
      GEOMETRY_FULL = 1;
      GEOMETRY_STRAIGHT_LINE = 2;
    }

    Geometry geometry = 1;
  }

  RoutingType routing_type = 1;
  bool force_update = 2;
  bool retrieve_waypoints = 3;

  Osrm osrm = 4;
}

message RouteInfo {
  Location origin = 1;
  Location destination = 2;
  int32 duration = 3;
  float distance = 4;
  repeated Location waypoints = 5;
}

